# 381706-1_Bezruchko

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  шпора_по_гугл_тестам.txt
List_on_array/: CMakeLists.txt  main_List_on_array.cpp
List_on_arrayLib/: CMakeLists.txt  List_on_array.h  Stack.h
List_on_arrayTest/: CMakeLists.txt  List_on_arrayTest.cpp  StackTest.cpp
List_on_selection/: CMakeLists.txt  main_List_on_selection.cpp  main_Stack.cpp
List_on_selectionLib/: CMakeLists.txt  List_on_selection.cpp  List_on_selection.h
List_on_selectionTest/: CMakeLists.txt  List_on_selectionTest.cpp  StackTest.cpp
Multistack/: CMakeLists.txt  main_Multistack.cpp  main_Stack.cpp
MultistackLib/: CMakeLists.txt  Multistack.h
MultistackTest/: CMakeLists.txt  MultistackTest.cpp  StackTest.cpp
Polish/: CMakeLists.txt  main_Stack.cpp
PolishLib/: CMakeLists.txt  Polish.cpp  Polish.h
PolishTest/: PolishTest.cpp  StackTest.cpp
Polynom/: CMakeLists.txt  main_Stack.cpp
PolynomLib/: CMakeLists.txt  Polynom.cpp  Polynom.h
PolynomTest/: PolynomTest.cpp  StackTest.cpp
Queue/: CMakeLists.txt  main_Queue.cpp
QueueLib/: CMakeLists.txt  Queue.h
QueueTest/: QueueTest.cpp
Stack/: CMakeLists.txt  main_Stack.cpp
StackLib/: Stack.h
StackTest/: StackTest.cpp
Stack_on_list/: CMakeLists.txt  main_Stack_on_list.cpp
Stack_on_listLib/: CMakeLists.txt  Stack_on_list.cpp  Stack_on_list.h
Stack_on_listTest/: CMakeLists.txt  StackTest.cpp
Vector/: CMakeLists.txt  main_Vector.cpp
VectorLib/: CMakeLists.txt  Vector.cpp  Vector.h
VectorTest/: VectorTest.cpp
ost/: CMakeLists.txt  ost.h
отчеты/: Bezruchko_List_on_array_ok.doc  Bezruchko_List_on_selection_ok.doc  Bezruchko_Multistack_ok.doc  Bezruchko_Polish_ok.doc  Bezruchko_Polynom_ok.doc  Bezruchko_Queue.doc  Bezruchko_Queue_ok.doc  Bezruchko_Stack_ok.doc  Bezruchko_Stack_on_list_ok.doc  Bezruchko_Vector_ok.doc
