cmake_minimum_required(VERSION 2.8) #Проверка версии CMake.

set(PROJECT_NAME 381706-1_Bezruchko) #Создаем обычную локальную переменную с именем проекта
project(${PROJECT_NAME}) # Название проекта

set(Vector Vector) #Переменная с именем библиотеки
set(VectorLib VectorLib)
set(VectorTest VectorTest)


set(Stack Stack)
set(StackLib StackLib)

set(Queue Queue)
set(QueueLib QueueLib)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE) 
# Создается переменная CMAKE_CONFIGURATION_TYPES со значением "Debug;Release" 
# и меткой/разделом Configs, переменная сохраниется в специальном файле доступном 
# из всех файлов,
if(NOT CMAKE_BUILD_TYPE) # проверка имеющихся у компилятора вариантов сборки
  set(CMAKE_BUILD_TYPE Release) #Если нет то устанавливаем Release
endif()

file(GLOB hdrs "*.h*") #Добавляем в переменную hdrs все файлы с расширением .h
file(GLOB srcs "*.cpp") #Добавляем в переменную srcs все файлы с расширением .h


# add_executable(${PROJECT_NAME} ${srcs} ${hdrs}) 
# Создаем проект с именем из переменной ${PROJECT_NAME},
# в него добавляются файлы из переменных ${srcs} и ${hdrs}

# ${CMAKE_CURRENT_SOURCE_DIR}

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/VectorLib 
${CMAKE_CURRENT_SOURCE_DIR}/gtest)
add_subdirectory(gtest)
add_subdirectory(Vector)
add_subdirectory(VectorLib)
add_subdirectory(VectorTest)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/StackLib)
add_subdirectory(Stack)
add_subdirectory(StackLib)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/QueueLib)
add_subdirectory(Queue)
add_subdirectory(QueueLib)
# target_link_libraries(${PROJECT_NAME} ${MyLib1}) 
# Подключаем к проекту с именем ${PROJECT_NAME} библиотеку с именем ${MyLib1}